# Publication_blog

./: .env_sample  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
blog/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_initial.py
blog/templates/blog/: base_template.html  blogpost_all_list.html  blogpost_confirm_delete.html  blogpost_detail.html  blogpost_form.html  blogpost_list.html  index.html
blog/templates/blog/includes/: inc_head_menu.html  inc_main_menu.html
blog/templatetags/: my_tags.py
config/: settings.py  urls.py
users/: admin.py  forms.py  models.py  servicies.py  tests.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
users/templates/users/: login.html  payment_cancel.html  payment_create.html  payment_success.html  phone_verify.html  user_form.html  user_register_form.html
